[package]
name = "testbench_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
arrayvec = { version = "0.5.1", default-features = false }
serialport = "3.3.0"
structopt = "0.3.14"
signal-hook = "0.1.14"
byteorder = "1.3.4"